Update dependencies for Java 9+ compatibility